syntax = "proto3";

package prac.net;

option go_package = ".;pb";
option java_package = "dev.glycine.pracstation.pb";
option java_multiple_files = true;

message InitRouteMessage {
  string route_id = 1;
  string button_id = 2;
}